--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
  <a href="video.html" >Me playing piano</a>
                 </td>
                 <td>
-       <img src="piano_img.jfif" height="300" width="400"
+       <img src="/imgs/piano_img.jfif" height="300" width="400"
        alt="image of the piano">
-       <img src="download.jfif" height="300" width="400" alt="another piano">
-       <img src="organ_img.jpg" Heigh="300"  width="420" alt="Musical organ">
+       <img src="/imgs/download.jfif" height="300" width="400" alt="another piano">
+       <img src="/imgs/organ_img.jpg" Heigh="300"  width="420" alt="Musical organ">
        <table>
         <tr> 
             <th>Piano</th>
@@ -56,3 +56,4 @@
        </table>
     </body>
 </html>
+
